--- a/src/Sekiban.Web/Sekiban.Web.csproj
+++ b/src/Sekiban.Web/Sekiban.Web.csproj
@@ -5,12 +5,12 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <OutputType>Library</OutputType>
         <PackageId>Sekiban.Web</PackageId>
-        <Version>0.23.0-preview2</Version>
+        <Version>0.23.0-preview3</Version>
         <Authors>J-Tech Group</Authors>
         <Company>J-Tech-Japan</Company>
         <PackageDescription>Sekiban - Event Sourcing Framework WebHelper</PackageDescription>
         <RepositoryUrl>https://github.com/J-Tech-Japan/Sekiban</RepositoryUrl>
-        <PackageVersion>0.23.0-preview2</PackageVersion>
+        <PackageVersion>0.23.0-preview3</PackageVersion>
         <Description>Add Indexed DB as infrastructure</Description>
         <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
         <LangVersion>preview</LangVersion>
@@ -23,13 +23,14 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Jtechs.OpenApi.AspNetCore.Swashbuckle" Version="0.2.5" />
-        <PackageReference Include="Microsoft.Sbom.Targets" Version="3.0.0">
-          <PrivateAssets>all</PrivateAssets>
-          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        <PackageReference Include="Jtechs.OpenApi.AspNetCore.Swashbuckle" Version="0.2.5"/>
+        <PackageReference Include="Microsoft.Sbom.Targets" Version="3.0.1">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="7.0.0" />
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0"/>
         <None Include="..\README.md" Pack="true" PackagePath="\"/>
+        <PackageReference Include="Sekiban.Core" Version="0.23.0-preview3"/>
     </ItemGroup>
 
     <ItemGroup>
