--- a/src/Sekiban.Pure.AspNetCore/Sekiban.Pure.AspNetCore.csproj
+++ b/src/Sekiban.Pure.AspNetCore/Sekiban.Pure.AspNetCore.csproj
@@ -1,10 +1,25 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net9.0</TargetFramework>
-        <LangVersion>preview</LangVersion>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <LangVersion>preview</LangVersion>
+        <PackageId>Sekiban.Pure.AspNetCore</PackageId>
+        <Version>1.0.0-preview1</Version>
+        <Authors>J-Tech Group</Authors>
+        <Company>J-Tech-Japan</Company>
+        <PackageDescription>Sekiban - Pure Event Sourcing Framework AspNetCore Integration</PackageDescription>
+        <RepositoryUrl>https://github.com/J-Tech-Japan/Sekiban</RepositoryUrl>
+        <PackageVersion>1.0.0-preview1</PackageVersion>
+        <Description>Pure Event Sourcing Framework AspNetCore Integration</Description>
+        <AssemblyName>Sekiban.Pure.AspNetCore</AssemblyName>
+        <RootNamespace>Sekiban.Pure.AspNetCore</RootNamespace>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
+        <IncludeSymbols>true</IncludeSymbols>
+        <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+        <TargetFrameworks>net9.0;net8.0</TargetFrameworks>
+        <GenerateSBOM>true</GenerateSBOM>
     </PropertyGroup>
 
     <ItemGroup>
@@ -13,6 +28,11 @@
 
     <ItemGroup>
         <ProjectReference Include="..\Sekiban.Pure\Sekiban.Pure.csproj"/>
+        <PackageReference Include="Microsoft.Sbom.Targets" Version="3.0.1">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <None Include="..\README.md" Pack="true" PackagePath="\"/>
     </ItemGroup>
 
 </Project>
