--- a/src/Sekiban.Pure.Orleans.NUnit/Sekiban.Pure.Orleans.NUnit.csproj
+++ b/src/Sekiban.Pure.Orleans.NUnit/Sekiban.Pure.Orleans.NUnit.csproj
@@ -1,21 +1,42 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <LangVersion>preview</LangVersion>
+        <PackageId>Sekiban.Pure.Orleans.NUnit</PackageId>
+        <Version>1.0.0-preview1</Version>
+        <Authors>J-Tech Group</Authors>
+        <Company>J-Tech-Japan</Company>
+        <PackageDescription>Sekiban - Pure Event Sourcing Framework Orleans NUnit Integration</PackageDescription>
+        <RepositoryUrl>https://github.com/J-Tech-Japan/Sekiban</RepositoryUrl>
+        <PackageVersion>1.0.0-preview1</PackageVersion>
+        <Description>Pure Event Sourcing Framework Orleans NUnit Integration</Description>
+        <AssemblyName>Sekiban.Pure.Orleans.NUnit</AssemblyName>
+        <RootNamespace>Sekiban.Pure.Orleans.NUnit</RootNamespace>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
+        <IncludeSymbols>true</IncludeSymbols>
+        <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+        <TargetFrameworks>net9.0;net8.0</TargetFrameworks>
+        <GenerateSBOM>true</GenerateSBOM>
     </PropertyGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\Sekiban.Pure.Orleans\Sekiban.Pure.Orleans.csproj"/>
+        <ProjectReference Include="..\Sekiban.Pure\Sekiban.Pure.csproj"/>
+    </ItemGroup>
 
     <ItemGroup>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0"/>
         <PackageReference Include="Microsoft.Orleans.Serialization.SystemTextJson" Version="9.1.2"/>
         <PackageReference Include="Microsoft.Orleans.TestingHost" Version="9.1.2"/>
         <PackageReference Include="NUnit" Version="4.3.2"/>
-    </ItemGroup>
-
-    <ItemGroup>
-        <ProjectReference Include="..\Sekiban.Pure.Orleans\Sekiban.Pure.Orleans.csproj"/>
-        <ProjectReference Include="..\Sekiban.Pure\Sekiban.Pure.csproj"/>
+        <PackageReference Include="Microsoft.Sbom.Targets" Version="3.0.1">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <None Include="..\README.md" Pack="true" PackagePath="\"/>
     </ItemGroup>
 
 </Project>
