--- a/src/Sekiban.Pure.SourceGenerator/Sekiban.Pure.SourceGenerator.csproj
+++ b/src/Sekiban.Pure.SourceGenerator/Sekiban.Pure.SourceGenerator.csproj
@@ -1,12 +1,25 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.0</TargetFramework>
-        <LangVersion>preview</LangVersion>
+        <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <!-- LangVersionは明示的に書いておこう -->
+        <PackageId>Sekiban.Pure.SourceGenerator</PackageId>
+        <Version>1.0.0-preview1</Version>
+        <Authors>J-Tech Group</Authors>
+        <Company>J-Tech-Japan</Company>
+        <PackageDescription>Sekiban - Pure Event Sourcing Framework Source Generator</PackageDescription>
+        <RepositoryUrl>https://github.com/J-Tech-Japan/Sekiban</RepositoryUrl>
+        <PackageVersion>1.0.0-preview1</PackageVersion>
+        <Description>Pure Event Sourcing Framework Source Generator</Description>
+        <AssemblyName>Sekiban.Pure.SourceGenerator</AssemblyName>
+        <RootNamespace>Sekiban.Pure.SourceGenerator</RootNamespace>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
+        <IncludeSymbols>true</IncludeSymbols>
+        <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+        <TargetFramework>netstandard2.0</TargetFramework>
+        <GenerateSBOM>true</GenerateSBOM>
         <LangVersion>11</LangVersion>
-        <!-- Analyzer(Source Generator)ですという設定 -->
         <IsRoslynComponent>true</IsRoslynComponent>
         <AnalyzerLanguage>cs</AnalyzerLanguage>
         <EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
@@ -14,8 +27,11 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.12.0"/>
+        <PackageReference Include="Microsoft.Sbom.Targets" Version="3.0.1">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <None Include="..\README.md" Pack="true" PackagePath="\"/>
     </ItemGroup>
-<!--    <ItemGroup>-->
-<!--        <Analyzer Include="$(TargetPath)"/>-->
-<!--    </ItemGroup>-->
+
 </Project>
