--- a/src/Sekiban.Pure.NUnit/Sekiban.Pure.NUnit.csproj
+++ b/src/Sekiban.Pure.NUnit/Sekiban.Pure.NUnit.csproj
@@ -5,12 +5,12 @@
         <Nullable>enable</Nullable>
         <LangVersion>preview</LangVersion>
         <PackageId>Sekiban.Pure.NUnit</PackageId>
-        <Version>1.0.0-preview1</Version>
+        <Version>1.0.0-preview2</Version>
         <Authors>J-Tech Group</Authors>
         <Company>J-Tech-Japan</Company>
         <PackageDescription>Sekiban - Pure Event Sourcing Framework NUnit Integration</PackageDescription>
         <RepositoryUrl>https://github.com/J-Tech-Japan/Sekiban</RepositoryUrl>
-        <PackageVersion>1.0.0-preview1</PackageVersion>
+        <PackageVersion>1.0.0-preview2</PackageVersion>
         <Description>Pure Event Sourcing Framework NUnit Integration</Description>
         <AssemblyName>Sekiban.Pure.NUnit</AssemblyName>
         <RootNamespace>Sekiban.Pure.NUnit</RootNamespace>
@@ -23,7 +23,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Sekiban.Pure\Sekiban.Pure.csproj"/>
+        <ProjectReference Include="..\Sekiban.Pure.AspNetCore\Sekiban.Pure.AspNetCore.csproj"/>
     </ItemGroup>
 
     <ItemGroup>
@@ -34,6 +34,7 @@
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <None Include="..\README.md" Pack="true" PackagePath="\"/>
+        <PackageReference Include="Sekiban.Pure.AspNetCore" Version="1.0.0-preview2"/>
     </ItemGroup>
 
 </Project>
