--- a/src/Sekiban.Pure.Orleans/Sekiban.Pure.Orleans.csproj
+++ b/src/Sekiban.Pure.Orleans/Sekiban.Pure.Orleans.csproj
@@ -5,12 +5,12 @@
         <Nullable>enable</Nullable>
         <LangVersion>preview</LangVersion>
         <PackageId>Sekiban.Pure.Orleans</PackageId>
-        <Version>1.0.0-preview1</Version>
+        <Version>1.0.0-preview2</Version>
         <Authors>J-Tech Group</Authors>
         <Company>J-Tech-Japan</Company>
         <PackageDescription>Sekiban - Pure Event Sourcing Framework Orleans Integration</PackageDescription>
         <RepositoryUrl>https://github.com/J-Tech-Japan/Sekiban</RepositoryUrl>
-        <PackageVersion>1.0.0-preview1</PackageVersion>
+        <PackageVersion>1.0.0-preview2</PackageVersion>
         <Description>Pure Event Sourcing Framework Orleans Integration</Description>
         <AssemblyName>Sekiban.Pure.Orleans</AssemblyName>
         <RootNamespace>Sekiban.Pure.Orleans</RootNamespace>
@@ -23,17 +23,18 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Orleans.Server" Version="9.0.1" />
-        <PackageReference Include="Microsoft.Orleans.Streaming" Version="9.0.1" />
+        <PackageReference Include="Microsoft.Orleans.Server" Version="9.0.1"/>
+        <PackageReference Include="Microsoft.Orleans.Streaming" Version="9.0.1"/>
         <PackageReference Include="Microsoft.Sbom.Targets" Version="3.0.1">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <None Include="..\README.md" Pack="true" PackagePath="\"/>
+        <PackageReference Include="Sekiban.Pure.AspNetCore" Version="1.0.0-preview2"/>
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Sekiban.Pure\Sekiban.Pure.csproj" />
+        <ProjectReference Include="..\Sekiban.Pure.AspNetCore\Sekiban.Pure.AspNetCore.csproj"/>
     </ItemGroup>
 
 </Project>
