Refactor WeatherForecast model to use DateOnly, add serialization attributes, and implement query handling for WeatherForecast

--- a/Samples/Tutorials/OrleansSekiban/OrleansSekiban.Domain/OrleansSekiban.Domain.csproj
+++ b/Samples/Tutorials/OrleansSekiban/OrleansSekiban.Domain/OrleansSekiban.Domain.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.Orleans.Server" Version="9.1.2" />
       <PackageReference Include="Sekiban.Pure" Version="1.0.0-preview4" />
       <PackageReference Include="Sekiban.Pure.SourceGenerator" Version="1.0.0-preview4" />
     </ItemGroup>
