--- a/Samples/Tutorials/OrleansSekiban/OrleansSekiban.AppHost/OrleansSekiban.AppHost.csproj
+++ b/Samples/Tutorials/OrleansSekiban/OrleansSekiban.AppHost/OrleansSekiban.AppHost.csproj
@@ -18,6 +18,9 @@
 
   <ItemGroup>
     <PackageReference Include="Aspire.Hosting.AppHost" Version="9.0.0" />
+    <PackageReference Include="Aspire.Hosting.Azure.Storage" Version="9.0.0" />
+    <PackageReference Include="Aspire.Hosting.Orleans" Version="9.0.0" />
+    <PackageReference Include="Aspire.Hosting.PostgreSQL" Version="9.0.0" />
   </ItemGroup>
 
 </Project>
