Add template configuration and update project files for OrleansSekiban

--- a/Samples/Tutorials/OrleansSekiban/OrleansSekiban.AppHost/OrleansSekiban.AppHost.csproj
+++ b/Samples/Tutorials/OrleansSekiban/OrleansSekiban.AppHost/OrleansSekiban.AppHost.csproj
@@ -9,6 +9,7 @@
     <Nullable>enable</Nullable>
     <IsAspireHost>true</IsAspireHost>
     <UserSecretsId>bbde31a7-e1b9-473e-b406-c897b4f46bdb</UserSecretsId>
+  <IsPackable>true</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
