--- a/Samples/Tutorials/OrleansSekiban/OrleansSekiban.Domain/OrleansSekiban.Domain.csproj
+++ b/Samples/Tutorials/OrleansSekiban/OrleansSekiban.Domain/OrleansSekiban.Domain.csproj
@@ -5,6 +5,7 @@
         <LangVersion>preview</LangVersion>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <IsPackable>true</IsPackable>
     </PropertyGroup>
 
     <ItemGroup>
