--- a/Samples/Tutorials/OrleansSekiban/OrleansSekiban.ServiceDefaults/OrleansSekiban.ServiceDefaults.csproj
+++ b/Samples/Tutorials/OrleansSekiban/OrleansSekiban.ServiceDefaults/OrleansSekiban.ServiceDefaults.csproj
@@ -5,6 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <IsAspireSharedProject>true</IsAspireSharedProject>
+    <IsPackable>true</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
