Add weather forecast commands and events for input, update, and deletion

--- a/templates/Sekiban.Pure.Templates/content/Sekiban.Orleans.Aspire/OrleansSekiban.Domain/OrleansSekiban.Domain.csproj
+++ b/templates/Sekiban.Pure.Templates/content/Sekiban.Orleans.Aspire/OrleansSekiban.Domain/OrleansSekiban.Domain.csproj
@@ -14,4 +14,8 @@
       <PackageReference Include="Sekiban.Pure.SourceGenerator" Version="1.0.0-preview6" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="ValueObjects\" />
+    </ItemGroup>
+
 </Project>
