--- a/tests/Pure.Domain.xUnit/Pure.Domain.xUnit.csproj
+++ b/tests/Pure.Domain.xUnit/Pure.Domain.xUnit.csproj
@@ -7,10 +7,12 @@
 
         <IsPackable>false</IsPackable>
         <IsTestProject>true</IsTestProject>
+        <UserSecretsId>9806039d-be92-4cf4-8d1e-c3b9ab1e3130</UserSecretsId>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="coverlet.collector" Version="6.0.4"/>
+        <PackageReference Include="Microsoft.DotNet.PlatformAbstractions" Version="3.1.6"/>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0"/>
         <PackageReference Include="xunit" Version="2.9.3"/>
         <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2"/>
@@ -21,8 +23,16 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\internalUsages\Pure.Domain\Pure.Domain.csproj"/>
-        <ProjectReference Include="..\src\Sekiban.Pure.Orleans.xUnit\Sekiban.Pure.Orleans.xUnit.csproj"/>
+        <ProjectReference Include="..\..\internalUsages\Pure.Domain\Pure.Domain.csproj"/>
+        <ProjectReference Include="..\..\src\Sekiban.Pure.CosmosDb\Sekiban.Pure.CosmosDb.csproj"/>
+        <ProjectReference Include="..\..\src\Sekiban.Pure.Orleans.xUnit\Sekiban.Pure.Orleans.xUnit.csproj"/>
+        <ProjectReference Include="..\..\src\Sekiban.Pure.Postgres\Sekiban.Pure.Postgres.csproj"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <None Update="appsettings.json">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 
 </Project>
