Refactor service configuration methods in SekibanOrleansTestBase for improved accessibility and update target framework to net9.0

--- a/tests/Pure.Domain.xUnit/Pure.Domain.xUnit.csproj
+++ b/tests/Pure.Domain.xUnit/Pure.Domain.xUnit.csproj
@@ -1,13 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
+        <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
 
         <IsPackable>false</IsPackable>
         <IsTestProject>true</IsTestProject>
         <UserSecretsId>9806039d-be92-4cf4-8d1e-c3b9ab1e3130</UserSecretsId>
+        <LangVersion>13</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
