Update test command in GitHub Actions and add xunit.runner.json to disable test parallelization

--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -55,4 +55,4 @@ jobs:
         dotnet build Sekiban.sln -c Release
     - name: dotnet test
       run: |
-        dotnet test -c Release -m:1
+        dotnet test -c Release
