Add step to export Cosmos DB Emulator certificate in run_test.yml

--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -41,6 +41,13 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 9.0.x
+    - name: Export Cosmos DB Emulator Certificate
+      run: |
+        sudo apt update && sudo apt install -y openssl
+        openssl s_client -connect localhost:8081 </dev/null | sed -ne '/-BEGIN CERTIFICATE-/,/-END CERTIFICATE-/p' > cosmos_emulator.cert
+        
+        sudo cp cosmos_emulator.cert /usr/local/share/ca-certificates/
+        sudo update-ca-certificates
     - name: Secret Settings
       run: |
         pushd ./tests/Pure.Domain.xUnit
