Remove Cosmos DB emulator configuration from run_test.yml and set user secrets for Azure Cosmos Database

--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -29,17 +29,6 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
-      cosmosdb:
-        image: mcr.microsoft.com/cosmosdb/linux/azure-cosmos-emulator:vnext-preview
-        ports:
-          - 8081:8081
-        env:
-          PROTOCOL: https
-
-    env:
-      COSMOSDB_CONNECTION_STRING: ${{ secrets.COSMOSDB_CONNECTION_STRING }}
-      COSMOSDB_DATABASE_NAME: ${{ vars.COSMOSDB_DATABASE_NAME }}
-      COSMOSDB_CONTAINER_NAME: ${{ vars.COSMOSDB_CONTAINER_NAME }}
     steps:
     - uses: actions/checkout@v4
     - name: Setup .NET 9
@@ -55,6 +44,7 @@ jobs:
     - name: Secret Settings
       run: |
         pushd ./tests/Pure.Domain.xUnit
+        dotnet user-secrets set "Sekiban:Azure:CosmosDatabase" "GithubActionsPure"
         dotnet user-secrets set "ConnectionStrings:SekibanCosmos" "${{ secrets.COSMOSDB_CONNECTION_STRING }}"
         dotnet user-secrets set "ConnectionStrings:SekibanPostgres" "Host=127.0.0.1;Port=5432;Database=mydb;Username=myuser;Password=mypassword;"
     - name: dotnet test
