Update run_test.yml to change test directory path from 'test' to 'tests'

--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -6,7 +6,7 @@ on:
     branches: [ main ]
     paths:
       - "src/**"
-      - "test/**"
+      - "tests/**"
       - "samples/**"
 concurrency:
   group: CosmosDbConnect
