add domain aggregates for branches and carts, including event payloads and projectors

--- a/Samples/Tutorials/AspireEventSample/AspireEventSample.ApiService/AspireEventSample.ApiService.csproj
+++ b/Samples/Tutorials/AspireEventSample/AspireEventSample.ApiService/AspireEventSample.ApiService.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\AspireEventSample.Domain\AspireEventSample.Domain.csproj"/>
         <ProjectReference Include="..\AspireEventSample.MigrationHost\AspireEventSample.MigrationHost.csproj"/>
         <ProjectReference Include="..\AspireEventSample.ReadModels\AspireEventSample.ReadModels.csproj"/>
         <ProjectReference Include="..\AspireEventSample.ServiceDefaults\AspireEventSample.ServiceDefaults.csproj"/>
@@ -31,11 +32,12 @@
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4"/>
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.Design" Version="1.1.0"/>
         <PackageReference Include="OrleansDashboard" Version="8.2.0"/>
-        <PackageReference Include="Scalar.AspNetCore" Version="2.0.30"/>
-        <PackageReference Include="Sekiban.Pure.CosmosDb" Version="1.0.0-preview9"/>
-        <PackageReference Include="Sekiban.Pure.Orleans" Version="1.0.0-preview9"/>
-        <PackageReference Include="Sekiban.Pure.Postgres" Version="1.0.0-preview9"/>
-        <PackageReference Include="Sekiban.Pure.SourceGenerator" Version="1.0.0-preview9"/>
+        <PackageReference Include="Scalar.AspNetCore" Version="2.1.1"/>
+        <PackageReference Include="Sekiban.Pure.CosmosDb" Version="1.0.1-preview01"/>
+        <PackageReference Include="Sekiban.Pure.Orleans" Version="1.0.1-preview01"/>
+        <PackageReference Include="Sekiban.Pure.Postgres" Version="1.0.1-preview01"/>
+        <PackageReference Include="Sekiban.Pure.ReadModel" Version="1.0.1-preview01"/>
+        <PackageReference Include="Sekiban.Pure.SourceGenerator" Version="1.0.1-preview01"/>
     </ItemGroup>
 
 </Project>
