--- a/src/Sekiban.Pure.xUnit/Sekiban.Pure.xUnit.csproj
+++ b/src/Sekiban.Pure.xUnit/Sekiban.Pure.xUnit.csproj
@@ -5,13 +5,13 @@
         <Nullable>enable</Nullable>
         <LangVersion>preview</LangVersion>
         <PackageId>Sekiban.Pure.xUnit</PackageId>
-        <Version>1.0.1-preview01</Version>
+        <Version>1.0.1-preview02</Version>
         <Authors>J-Tech Group</Authors>
         <Company>J-Tech-Japan</Company>
         <PackageDescription>Sekiban - Pure Event Sourcing Framework xUnit Integration</PackageDescription>
         <RepositoryUrl>https://github.com/J-Tech-Japan/Sekiban</RepositoryUrl>
-        <PackageVersion>1.0.1-preview01</PackageVersion>
-        <Description>Read model initial release</Description>
+        <PackageVersion>1.0.1-preview02</PackageVersion>
+        <Description>Multi Blob saving and reading issue resolved</Description>
         <AssemblyName>Sekiban.Pure.xUnit</AssemblyName>
         <RootNamespace>Sekiban.Pure.xUnit</RootNamespace>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
@@ -34,7 +34,7 @@
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <None Include="..\README.md" Pack="true" PackagePath="\"/>
-        <PackageReference Include="Sekiban.Pure.AspNetCore" Version="1.0.1-preview01"/>
+        <PackageReference Include="Sekiban.Pure.AspNetCore" Version="1.0.1-preview02"/>
     </ItemGroup>
 
 </Project>
