feat: update logging configuration to include Azure.Core, Azure.Identity, and Azure.Storage levels in appsettings.json files

--- a/internalUsages/OrleansSekiban.AppHost/appsettings.json
+++ b/internalUsages/OrleansSekiban.AppHost/appsettings.json
@@ -3,7 +3,10 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning",
-      "Aspire.Hosting.Dcp": "Warning"
+      "Azure.Core": "Warning",
+      "Azure.Identity": "Warning",
+      "Azure.Storage": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
