--- a/templates/Sekiban.Pure.Templates/content/Sekiban.Orleans.Aspire/OrleansSekiban.ApiService/appsettings.json
+++ b/templates/Sekiban.Pure.Templates/content/Sekiban.Orleans.Aspire/OrleansSekiban.ApiService/appsettings.json
@@ -2,7 +2,10 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Azure.Core": "Warning",
+      "Azure.Identity": "Warning",
+      "Azure.Storage": "Warning"
     }
   },
   "AllowedHosts": "*"
