feat: add WeatherCount projections and queries for weather forecast tracking

--- a/templates/Sekiban.Pure.Templates/content/Sekiban.Orleans.Aspire/OrleansSekiban.ApiService/OrleansSekiban.ApiService.csproj
+++ b/templates/Sekiban.Pure.Templates/content/Sekiban.Orleans.Aspire/OrleansSekiban.ApiService/OrleansSekiban.ApiService.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="Microsoft.Orleans.Clustering.AzureStorage" Version="9.1.2" />
     <PackageReference Include="Microsoft.Orleans.Clustering.Cosmos" Version="9.1.2" />
     <PackageReference Include="Microsoft.Orleans.Persistence.AzureStorage" Version="9.1.2" />
+    <PackageReference Include="Microsoft.Orleans.Persistence.Cosmos" Version="9.1.2" />
     <PackageReference Include="Microsoft.Orleans.Persistence.Memory" Version="9.1.2" />
     <PackageReference Include="Microsoft.Orleans.Streaming" Version="9.1.2" />
     <PackageReference Include="OrleansDashboard" Version="8.2.0" />
